specs/blueprints/errors/parsing/section_not_found.eno
# Copying a section that does not exist

-- input
# copy < section
-- input

## ParseError

-- text
In line 1 the section 'section' should be copied, but it was not found.
-- text

-- snippet
   Line | Content
 >    1 | # copy < section
-- snippet

selection: [0,0] => [0,16]

# Copying a section whose key only exists on a field

-- input
field: value

# copy < field
-- input

## ParseError

-- text
In line 3 the section 'field' should be copied, but it was not found.
-- text

-- snippet
   Line | Content
      1 | field: value
      2 | 
 >    3 | # copy < field
-- snippet

selection: [2,0] => [2,14]

# Copying a section whose key only exists on a fieldset

-- input
fieldset:
entry = value

# copy < fieldset
-- input

## ParseError

-- text
In line 4 the section 'fieldset' should be copied, but it was not found.
-- text

-- snippet
   Line | Content
   ...
      2 | entry = value
      3 | 
 >    4 | # copy < fieldset
-- snippet

selection: [3,0] => [3,17]

# Copying a section whose key only exists on a list

-- input
list:
- item

# copy < list
-- input

## ParseError

-- text
In line 4 the section 'list' should be copied, but it was not found.
-- text

-- snippet
   Line | Content
   ...
      2 | - item
      3 | 
 >    4 | # copy < list
-- snippet

selection: [3,0] => [3,13]

# Copying a section whose key only exists on a multiline field

-- input
-- multiline_field
value
-- multiline_field

# copy < multiline_field
-- input

## ParseError

-- text
In line 5 the section 'multiline_field' should be copied, but it was not found.
-- text

-- snippet
   Line | Content
   ...
      3 | -- multiline_field
      4 | 
 >    5 | # copy < multiline_field
-- snippet

selection: [4,0] => [4,24]

# Copying a section whose key only exists on an empty multiline field

-- input
-- multiline_field
-- multiline_field

# copy < multiline_field
-- input

## ParseError

-- text
In line 4 the section 'multiline_field' should be copied, but it was not found.
-- text

-- snippet
   Line | Content
   ...
      2 | -- multiline_field
      3 | 
 >    4 | # copy < multiline_field
-- snippet

selection: [3,0] => [3,24]

# Copying a section whose key only exists on a fieldset entry

-- input
fieldset:
entry = value

# copy < entry
-- input

## ParseError

-- text
In line 4 the section 'entry' should be copied, but it was not found.
-- text

-- snippet
   Line | Content
   ...
      2 | entry = value
      3 | 
 >    4 | # copy < entry
-- snippet

selection: [3,0] => [3,14]
